syntax = "proto3";

option go_package = "github.com/poommu-sp/public-exim-grpc-protocol.git/samantra/services/rm1_services;rm1";

package samantra.services.rm1;

import "google/protobuf/timestamp.proto";

service RM1 {
  rpc ListOSLotInfo(ListOSLotInfoRequest) returns (ListOSLotInfoResponse) {}
  rpc GetListOWRM1(ListOSLotInfoRequest) returns (ListRM1Response) {}
}

message ListOSLotInfoRequest {
  google.protobuf.Timestamp date = 1;
  string quotaType = 2;
}

message ListOSLotInfoResponse {
  repeated OSLotInfo OSLotInfos = 1;
}

message OSLotInfo {
  string LotNo = 1;
  float Price = 2;
  float ExchangeRate = 3;
  float IncludingTransport = 4;
  string PONO = 5;
}

message ListRM1Response {
  repeated RM1OutsideWarehouse RM1OutsideWarehouses = 1;
}

message RM1OutsideWarehouse {
  string ID = 1;
	string ReceivedDate = 2;
	string ReceivedTime = 3;
	string QuotaType = 4;
	string PODocNo = 5;
	string LotNo = 6;
	string ProductGroup = 7;
	string ProductGroupName = 8;
	string ProductCode = 9;
	string ProductName = 10;
	string InvoiceNo = 11;
	string VendorCode  = 12;
	string VendorName  = 13;
	float QuotaQty = 14;
	float QuotaWghAgro = 15;
	float ContainerQtyAgro = 16;
	string ETDDate = 17;
	string ETADate = 18;
	string PackTypeCode = 19;
	string ContainerClass  = 20;
	string PackingCode = 21;
	string TraderCode = 22;
	string PortCode = 23;
	string PortName = 24;
	string VesselName = 25;
	float QuotaWghAqua = 26;
	float ContainerQtyAqua = 27;
	float QuotaWghPo = 28;
	float ContainerQtyPo = 29;
	float QuotaWghSwt = 30;
	float ContainerQtySwt = 31;
}